--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.6.7",
     "ejs": "^0.8.8",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-load": "^1.1.16",
+    "method-override": "^2.3.10"
   },
   "engines": {
     "node": "10.x"
-  }  
+  }
 }
